--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
+    "copy-webpack-plugin": "^5.0.3",
+    "css-loader": "^3.1.0",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6"
   }
